Fix overflow on sidebar titles

--- a/src/Sidebar/Sidebar.scss
+++ b/src/Sidebar/Sidebar.scss
@@ -71,6 +71,11 @@
                     border: none;
                     color: #FFFFFF;
                     background: transparent;
+                    text-overflow: clip;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    max-width: 150px;
+                    cursor: pointer;
 
                     span{
                         font-size: 13px;
@@ -81,7 +86,6 @@
                 }
 
                 button:hover{
-                    cursor: pointer;
                     color: #E46643;
 
                     span{
